--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -5,12 +5,23 @@
     android:layout_height="match_parent"
     tools:context="MoviesFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"/>
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
-        android:numColumns="2"
+        android:numColumns="auto_fit"
         android:horizontalSpacing="2dp"
-        android:verticalSpacing="2dp" />
+        android:verticalSpacing="2dp"
+
+        android:columnWidth="120dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center" />
 </FrameLayout>
