--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -3,15 +3,22 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/holo_blue_bright"
-    android:layout_margin="2dp">
+    android:background="#E0E0E0"
+    android:padding="2dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp">
     <TextView
         android:id="@+id/review_author"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="17dp"
+        android:textColor="#4e4d4d"
+        android:text="test"/>
     <TextView
         android:id="@+id/review_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="#4e4d4d"
+        android:text="---"/>
 
 </LinearLayout>
