--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -21,15 +21,16 @@
             android:padding="2dp"
             tools:context="app.com.example.mohammed.popularmovies.DetailsFragment">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:background="#E0E0E0"
                 android:padding="5dp">
 
                 <ImageView
                     android:id="@+id/poster"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:scaleType="fitXY" />
 
@@ -66,7 +67,7 @@
                     android:text="@string/add_fav" />
 
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/overview"
