--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -55,6 +55,13 @@
                     android:textColor="#4e4d4d"
                     android:textSize="15dp"
                     android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/genres"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#4e4d4d"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/fav_button"
