--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,30 @@
     android:background="#FAFAFA"
     tools:context="app.com.example.mohammed.popularmovies.MainActivity">
 
-    <TextView
-        android:id="@+id/tv_main_sort_type"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="6dp"
-        android:textAlignment="center"
         android:background="#F5F5F5"
-        android:textColor="?android:attr/textColorSecondary"
-        android:fontFamily="sans-serif"
-        android:text="fdf" />
+        android:padding="6dp">
+        <TextView
+            android:id="@+id/tv_main_sort_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
+            android:textColor="?android:attr/textColorSecondary"
+            android:fontFamily="sans-serif"
+            android:text="Popular" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:paddingLeft="2dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/tv_main_sort_type"/>
+    </RelativeLayout>
+
 
     <FrameLayout
         android:id="@+id/movies_layout"
@@ -36,11 +49,27 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
-        <TextView
-            android:id="@+id/page_number"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp" />
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:gravity="center"
+                android:text="page"
+                android:layout_centerHorizontal="true"/>
+            <TextView
+                android:id="@+id/page_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:text="45"
+                android:layout_below="@id/page"
+                android:layout_centerHorizontal="true"/>
+        </RelativeLayout>
+
         <ImageView
             android:id="@+id/right_arrow"
             android:layout_width="40dp"
