--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,13 @@
                 android:textSize="12dp"
                 android:gravity="center"
                 android:text="page"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:textColor="#FF000000"/>
             <TextView
                 android:id="@+id/page_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15dp"
+                android:textSize="12dp"
                 android:text="45"
                 android:layout_below="@id/page"
                 android:layout_centerHorizontal="true"/>
