--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -30,6 +30,6 @@
     <item
         android:id="@+id/favorite"
         android:title="@string/fav_movies"
-        android:icon="@drawable/heart_after"
+        android:icon="@drawable/ic_favorite_black_24dp"
         compat:showAsAction="ifRoom"/>
 </menu>
